--- a/haskakafka.cabal
+++ b/haskakafka.cabal
@@ -10,7 +10,7 @@ license-file:        LICENSE
 author:              Thomas Dimson <tdimson@cs.stanford.edu>
 maintainer:          Thomas Dimson <tdimson@cs.stanford.edu>
 category:            Network
-build-type:          Simple
+build-type:          Custom
 cabal-version:       >=1.10
 
 source-repository head
@@ -36,7 +36,7 @@ library
   default-language:    Haskell2010
   ghc-options: -Wall 
   include-dirs:        /usr/local/include/librdkafka
-  extra-lib-dirs: /usr/local/lib
+  extra-lib-dirs:      /usr/local/lib
   extra-libraries:     rdkafka
 
 test-suite tests
