--- a/haskakafka.cabal
+++ b/haskakafka.cabal
@@ -34,7 +34,7 @@ library
   other-modules: 
   hs-source-dirs:      src
   default-language:    Haskell2010
-  ghc-options: -Wall 
+  ghc-options: -Wall -fno-warn-unused-imports -fno-warn-dodgy-imports
   include-dirs:        /usr/local/include/librdkafka
   extra-lib-dirs:      /usr/local/lib
   extra-libraries:     rdkafka
